--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Domasna1 - HTM & CSS</title>
+        <title>Domasna1 - HTM & CSS test</title>
         <meta charset="utf -8" />
     </head>
     <body>
